--- a/src/speech-app/package.json
+++ b/src/speech-app/package.json
@@ -10,12 +10,15 @@
   "dependencies": {
     "axios": "^1.1.3",
     "core-js": "^3.8.3",
+    "uuid": "^9.0.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.13"
   },
   "devDependencies": {
+    "@aspnet/signalr": "^1.0.27",
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@microsoft/signalr": "^7.0.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
