--- a/src/speech-app/package.json
+++ b/src/speech-app/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.1.3",
     "core-js": "^3.8.3",
+    "microsoft-cognitiveservices-speech-sdk": "^1.24.1",
     "uuid": "^9.0.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.13"
@@ -21,6 +22,7 @@
     "@microsoft/signalr": "^7.0.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
+    "microsoft-cognitiveservices-speech-sdk": "^1.24.1",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3"
